css/cart.css
.cart-overlay {
    position: fixed;
    inset: 0;
    /* background: rgba(0, 0, 0, 0.45); */
    display: flex;
    justify-content: flex-end;
    z-index: 1000;
}

.cart-panel {
    background-color: var(--ivory-eggshell);
    width: 100%;
    max-width: 26rem;
    height: 100vh;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    box-shadow: -8px 0 25px rgba(0, 0, 0, 0.15);
    animation: SlideIn 0.3s ease forwards;
}

.cart-header {
    background-color: #BC9566;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1.2rem 1.5rem;
}

.cart-header h2 {
    font-size: 1.8rem;
    color: #2D2824;
    margin: 0;
}

.cart-close-btn {
    background: none;
    border: none;
    font-size: 1rem;
    font-weight: bold;
    cursor: pointer;
    color: #2D2824;
}

.cart-body {
    flex: 1;
    overflow-y: auto;
    padding: 1rem;
}

.cart-item {
    background-color: white;
    display: flex;
    gap: 1rem;
    padding: 1rem;
    border-radius: 1rem;
    margin-bottom: 1rem;
    box-shadow: 0 2px 6px rgba(0,0,0,0.08);
    transition: background-color 0.3s ease, opacity 0.3s ease;
    padding-right: 0.5rem;
}

.cart-item:hover {
    cursor: pointer;
    background-color: var(--soft-red);
}

.cart-item:hover * {
    opacity: 0.7;
}

.cart-item:has(.qty-btn:hover) {
    background-color: white;
}


.cart-item:has(.qty-btn:hover) * {
    opacity: 1;
}

.cart-item .qty-btn-container {
    width: 100%;
    display: flex;
    gap: 0.2rem;
}

.cart-item img {
    width: 6rem;
    height: 6rem;
    object-fit: cover;
    border-radius: 0.8rem;
}

.cart-item-details {
    flex: 1;
}

.cart-item-details h3 {
    margin-bottom: 0.4rem;
}

.cart-item-details p {
    font-size: 0.9rem;
    line-height: 1.4;
    margin-bottom: 0.5rem;
}

.cart-item-details span {
    font-size: 0.9rem;
    font-weight: bold;
}

.cart-item-price {
    font-size: 1rem;
    font-weight: bold;
    color: #A98455;
    max-width: 6rem;
    white-space: nowrap;
    overflow: hidden;
    display: inline-block;
    text-overflow: ellipsis;

}

.cart-summary {
    display: flex;
    justify-content: space-between;
    padding: 1.5rem;
    margin-bottom: 1rem;
}

.cart-summary h3 {
    font-size: 1.2rem;
}

.cart-footer {
    padding: 0.4rem;
}

.cart-checkout-btn {
    background-color: #C5A579;
    width: 70%;
    border: none;
    padding: 1rem;
    border-radius: 0.8rem;
    font-size: 1rem;
    font-weight: bold;
    cursor: pointer;
    color: #2D2824;
    display: block;
    margin: 0 auto;
}

.cart-checkout-btn:hover {
    background-color: #A98455;
    color: white;
}

.quantity-container {
    display: flex;
    align-items: center;
    gap: 0.7rem;
    margin-top: 0.8rem;
}

.qty-btn {
    width: 2rem;
    height: 2rem;
    border: none;
    border-radius: 0.5rem;
    background-color: #C5A579;
    color: #2D2824;
    font-size: 1rem;
    font-weight: bold;
    cursor: pointer;
    transition: 0.2s;
}

.qty-btn:hover {
    background-color: #A98455;
    color: white;
}

.cart-quantity span {
    min-width: 1.5rem;
    text-align: center;
    font-weight: bold;
}

@media (max-width: 768px) {
    .cart-panel {
        max-width: 100%;
    }

    .cart-item {
        flex-direction: column;
    }

    .cart-item img {
        width: 100%;
        height: 13rem;
    }
}

